--- a/index.html
+++ b/index.html
@@ -3,19 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Reutl Summary Component</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Result Summary Component</title>
   </head>
   <body>
     <div class="info__section">
       <div class="info__result">
         <p>Lorem ipsum</p>
         <div class="result__value_section">
-          <p class="result__value"></p>
-          <p class="result__out-of-100"></p>
+          <p class="result__value">76</p>
+          <p class="result__out-of-100">of 100</p>
         </div>
-        <h1></h1>
+        <h1>Great</h1>
         <p class="result__explaination">
-          orem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
           viverra consectetur rutrum. Nunc eros diam, tempor et felis
           condimentum, maximus imperdiet mauris. Ut tempus ex at massa
           facilisis, eget blandit nisl tempor. Cras vel viverra nibh, nec
@@ -25,27 +26,28 @@
         </p>
       </div>
       <div class="info__summary">
-        <h1></h1>
+        <h1>Summary</h1>
         <div class="info__summary_category info__summary_reaction">
-          <div class="info__summary_icon"></div>
-          <div class="info__summary_category-title"></div>
-          <div class="info__summary_result"></div>
+          <img class="info__summary_icon" src="images/icon-reaction.svg">
+          <div class="info__summary_category-title">Reaction</div>
+          <div class="info__summary_result">80/100</div>
         </div>
         <div class="info__summary_category info__summary_memory">
-          <div class="info__summary_icon"></div>
-          <div class="info_summary_category-title"></div>
-          <div class="info__summary_result"></div>
+          <img class="info__summary_icon" src="images/icon-memory.svg">
+          <div class="info_summary_category-title">Memory</div>
+          <div class="info__summary_result">92/100</div>
         </div>
         <div class="info__summary_category info__summary_verbal">
-          <div class="info__summary_icon"></div>
-          <div class="info_summary_category-title"></div>
-          <div class="info__summary_result"></div>
+          <img class="info__summary_icon" src="images/icon-verbal.svg">
+          <div class="info_summary_category-title">Verbal</div>
+          <div class="info__summary_result">61/100</div>
         </div>
         <div class="info__summary_category info__summary_visual">
-          <div class="info__summary_icon"></div>
-          <div class="info_summary_category-title"></div>
-          <div class="info__summary_result"></div>
+          <img class="info__summary_icon" src="images/icon-visual.svg">
+          <div class="info_summary_category-title">Visual</div>
+          <div class="info__summary_result">73/100</div>
         </div>
+        <div class="button">Continue</div>
       </div>
     </div>
   </body>
