--- a/index.html
+++ b/index.html
@@ -24,26 +24,33 @@
         <div class="info__summary_category info__summary_reaction">
           <img class="info__summary_icon" src="images/icon-reaction.svg" />
           <div class="info__summary_category-title">Reaction</div>
-          <div class="info__summary_result">80/100</div>
+          <div class="info__summary_result">
+            <p>80<span class="hundred"> / 100</span></p>
+          </div>
         </div>
         <div class="info__summary_category info__summary_memory">
           <img class="info__summary_icon" src="images/icon-memory.svg" />
           <div class="info_summary_category-title">Memory</div>
-          <div class="info__summary_result">92/100</div>
+          <div class="info__summary_result">
+            <p>92<span class="hundred"> / 100</span></p>
+          </div>
         </div>
         <div class="info__summary_category info__summary_verbal">
           <img class="info__summary_icon" src="images/icon-verbal.svg" />
           <div class="info_summary_category-title">Verbal</div>
-          <div class="info__summary_result">61/100</div>
+          <div class="info__summary_result">
+            <p>61<span class="hundred"> / 100</span></p>
+          </div>
         </div>
         <div class="info__summary_category info__summary_visual">
           <img class="info__summary_icon" src="images/icon-visual.svg" />
           <div class="info_summary_category-title">Visual</div>
-          <div class="info__summary_result">73/100</div>
+          <div class="info__summary_result">
+            <p>73<span class="hundred"> / 100</span></p>
+          </div>
         </div>
         <div class="button">Continue</div>
       </div>
     </div>
   </body>
 </html>
-7
