feat:implement desktop view

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </p>
       </div>
       <div class="info__summary">
-        <h1>Summary</h1>
+        <h2 class="info__summary_text">Summary</h2>
         <div class="info__summary_category info__summary_reaction">
           <img class="info__summary_icon" src="images/icon-reaction.svg" />
           <div class="info__summary_category-title">Reaction</div>
